--- a/collective/ptg/carousel/locales/collective.ptg.carousel.pot
+++ b/collective/ptg/carousel/locales/collective.ptg.carousel.pot
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: collective.ptg.carousel VERSION\n"
 "POT-Creation-Date: 2015-05-16 14:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: DOMAIN\n"
+"Domain: collective.ptg.carousel\n"
 
 #. Default: "Carousel"
 #: ./__init__.py:98
