--- a/collective/ptg/carousel/locales/es/LC_MESSAGES/collective.ptg.carousel.po
+++ b/collective/ptg/carousel/locales/es/LC_MESSAGES/collective.ptg.carousel.po
@@ -1,21 +1,20 @@
-# Leonardo J. Caballero G. <leonardocaballero@gmail.com>, 2015.
+# Leonardo J. Caballero G. <leonardocaballero@gmail.com>, 2015, 2018.
 msgid ""
 msgstr ""
-"Project-Id-Version: collective.plonetruegallery\n"
+"Project-Id-Version: collective.ptg.carousel\n"
 "POT-Creation-Date: 2015-05-16 14:27+0000\n"
-"PO-Revision-Date: 2015-05-17 07:59-0430\n"
+"PO-Revision-Date: 2018-08-18 07:49-0400\n"
 "Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
-"Language-Team: ES <LL@li.org>\n"
+"Language-Team: Spanish Team\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.7.1\n"
 "Language-Code: es\n"
 "Language-Name: Español\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: collective.plonetruegallery\n"
+"Domain: collective.ptg.carousel\n"
 "X-Is-Fallback-For: es-ar es-bo es-cl es-co es-cr es-do es-ec es-es es-sv es-gt es-hn es-mx es-ni es-pa es-py es-pe es-pr es-us es-uy es-ve\n"
 
 #. Default: "Carousel"
@@ -26,12 +25,12 @@ msgstr "Carrusel"
 #. Default: "Height of (each) image"
 #: ./__init__.py:23
 msgid "label_carousel_imageheight"
-msgstr "Altura de (cada) imagen"
+msgstr "Alto de (cada) imagen"
 
 #. Default: "Width of carousel"
 #: ./__init__.py:13
 msgid "label_carousel_imagewidth"
-msgstr "Anchura del carrusel"
+msgstr "Ancho del carrusel"
 
 #. Default: "Opacity on overlay"
 #: ./__init__.py:32
@@ -96,12 +95,12 @@ msgstr "0.9 Casi nada"
 #. Default: "What stylesheet (css file) to use"
 #: ./__init__.py:73
 msgid "label_carousel_style"
-msgstr "¿Cual hoja de estilo (archivo CSS) para usar?"
+msgstr "¿Cual hoja de estilo (archivo css) para usar?"
 
 #. Default: "Custom css file"
 #: ./__init__.py:84
 msgid "label_carousel_style_custom"
-msgstr "Archivo CSS personalizable"
+msgstr "Archivo css personalizable"
 
 #. Default: "Default"
 #: ./__init__.py:78
@@ -111,12 +110,12 @@ msgstr "Por defecto"
 #. Default: "No style / css file"
 #: ./__init__.py:81
 msgid "label_carousel_style_no"
-msgstr "Sin estilo / archivo CSS"
+msgstr "Sin estilo / archivo css"
 
-#. Default: "Padding above imagetitle"
+#. Default: "Padding above image title"
 #: ./__init__.py:69
 msgid "label_carousel_toppadding"
-msgstr "Padding arriba del título de imagen"
+msgstr "Relleno arriba del título de la imagen"
 
 #. Default: "Use Thumbnail size instead of Size"
 #: ./__init__.py:28
@@ -126,4 +125,4 @@ msgstr "Usar tamaño de miniatura en vez del Tamaño"
 #. Default: "Name of Custom css file if you chose that above"
 #: ./__init__.py:90
 msgid "label_custom_style"
-msgstr "Nombre de archivo CSS personalizado si usted selecciono eso arriba"
+msgstr "Nombre de archivo css Personalizado si usted selecciono eso arriba"
