--- a/collective/ptg/carousel/locales/es/LC_MESSAGES/collective.ptg.carousel.po
+++ b/collective/ptg/carousel/locales/es/LC_MESSAGES/collective.ptg.carousel.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: collective.ptg.carousel\n"
 "POT-Creation-Date: 2015-05-16 14:27+0000\n"
-"PO-Revision-Date: 2018-08-18 07:49-0400\n"
+"PO-Revision-Date: 2018-09-13 07:49-0400\n"
 "Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: Spanish Team\n"
 "Language: es\n"
@@ -105,7 +105,7 @@ msgstr "Archivo css personalizable"
 #. Default: "Default"
 #: ./__init__.py:78
 msgid "label_carousel_style_default"
-msgstr "Por defecto"
+msgstr "Predeterminado"
 
 #. Default: "No style / css file"
 #: ./__init__.py:81
